tests/errors/semantics/cannot_infer_implicit_type.odl
main :: () -> void  {
    x := .{1, 2};
};